<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Overview category -->
        <LinearLayout
            android:id="@+id/container_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/book_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="@dimen/layout_margin"
                android:paddingLeft="@dimen/layout_margin"
                android:paddingStart="@dimen/layout_margin">

                <!-- Title field -->
                <EditText
                    android:id="@+id/edit_book_title"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_title"
                    android:inputType="textCapWords" />

                <!-- ISBN field -->
                <EditText
                    android:id="@+id/edit_book_isbn"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_isbn"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:id="@+id/container_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingEnd="@dimen/layout_margin"
                android:paddingLeft="@dimen/layout_margin"
                android:paddingStart="@dimen/layout_margin">

                <!-- Symbols for price ($) -->
                <TextView
                    android:id="@+id/label_price_symbol"
                    style="@style/EditorSymbolsStyle"
                    android:text="@string/symbol_book_price" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditorFieldStyle"
                    android:layout_toEndOf="@id/label_price_symbol"
                    android:layout_toRightOf="@id/label_price_symbol"
                    android:hint="@string/hint_book_price"
                    android:inputType="numberDecimal" />

            </RelativeLayout>
        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <Button
                android:id="@+id/decrement_btn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_marginLeft="@dimen/activity_large_margin"
                android:layout_marginStart="@dimen/activity_large_margin"
                android:background="@drawable/rounded_btn"
                android:text="@string/decrement_btn"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normalTxtSize" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_book_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_marginLeft="@dimen/qty_margin"
                    android:layout_marginRight="@dimen/qty_margin"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number"
                    android:maxLength="6" />

            </LinearLayout>

            <Button
                android:id="@+id/increment_btn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_marginEnd="@dimen/activity_medium_margin"
                android:layout_marginRight="@dimen/activity_medium_margin"
                android:background="@drawable/rounded_btn"
                android:text="@string/increment_btn"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normalTxtSize" />
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="@dimen/layout_margin"
                android:paddingLeft="@dimen/layout_margin"
                android:paddingStart="@dimen/layout_margin">

                <!-- Supplier Name field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <!-- Supplier Phone Number field -->
                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/contact_supplier_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_large_margin"
            android:background="@drawable/rounded_btn"
            android:padding="@dimen/activity_margin"
            android:text="@string/contact_supplier_btn"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>